--- a/tracking/src/main/resources/application.yml
+++ b/tracking/src/main/resources/application.yml
@@ -35,6 +35,7 @@ spring:
             consumer:
               enableDlq: true
               dlqName: TODO
+              startOffset: latest
       function:
         routing:
           enabled: true
