--- a/events/src/main/resources/application.yml
+++ b/events/src/main/resources/application.yml
@@ -6,13 +6,15 @@ logging:
     org.springframework.web: INFO
 
 spring:
+  profiles:
+    active: chaos-monkey
   h2:
     console:
       enabled: true
       path: /h2
   datasource:
     platform: h2
-    url: jdbc:h2:file:~/events;DB_CLOSE_DELAY=1
+    url: jdbc:h2:file:~/events1;DB_CLOSE_DELAY=1
     username: events
     password: events
   jpa:
@@ -23,9 +25,13 @@ management:
   endpoints:
     web:
       exposure:
-        include: health,info
+        include: health,info,chaosmonkey,metrics
   endpoint:
     health:
       show-details: always
+    chaosmonkey:
+      enabled: true
+    chaosmonkeyjmx:
+      enabled: true
 
 chaos.tracking.url: http://localhost:8081
